Fixed teaser height on narrow screens

--- a/app/views/style/abstract.sass
+++ b/app/views/style/abstract.sass
@@ -28,6 +28,6 @@
 		:right 0
 
 %full-height
-	:height $full-height
-	:height 100vh
-	:height unquote( 'calc( 100vh - #{$header-navigation-height} )' )
+	:min-height $full-height
+	:min-height 100vh
+	:min-height unquote( 'calc( 100vh - #{$header-navigation-height} )' )
